--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>siege-ui</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <title>Rainbow Six: Siege - sr.net</title>
+
+    <style>
+      html,
+      body,
+      #content {
+        position: relative;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+      }
+    </style>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Catamaran:800|Lato:400,600&amp;display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Fathom - https://usefathom.com -->
+    <script>
+      ;(function(f, a, t, h, o, m) {
+        a[h] =
+          a[h] ||
+          function() {
+            ;(a[h].q = a[h].q || []).push(arguments)
+          }
+        ;(o = f.createElement('script')),
+          (m = f.getElementsByTagName('script')[0])
+        o.async = 1
+        o.src = t
+        o.id = 'fathom-script'
+        m.parentNode.insertBefore(o, m)
+      })(document, window, 'https://cdn.usefathom.com/tracker.js', 'fathom')
+      fathom('set', 'siteId', 'LLJJZWJA')
+      fathom('trackPageview')
+    </script>
   </head>
+
   <body>
     <noscript>
-      <strong>We're sorry but siege-ui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+        We're sorry but stratroulette.net doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
+      </strong>
     </noscript>
+
     <div id="app"></div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
