--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
     <style>
       html,
       body,
-      #content {
+      #app {
         position: relative;
         margin: 0;
         padding: 0;
         height: 100%;
         width: 100%;
         overflow: hidden;
+
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
     </style>
 
