--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
-    <title>Rainbow Six: Siege - sr.net</title>
+    <title>R6|S - stratroulette.net</title>
 
     <style>
       html,
