--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png?v=1">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest?v=1">
+    <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg?v=1" color="#222">
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico?v=1">
+    <meta name="msapplication-TileColor" content="#222">
+    <meta name="theme-color" content="#222">
 
     <title>R6|S - stratroulette.net</title>
 
