--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     </style>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Catamaran:800|Lato:400,600&amp;display=swap"
+      href="https://fonts.googleapis.com/css?family=Catamaran:800|Lato:400,500&amp;display=swap"
       rel="stylesheet"
     />
 
@@ -60,7 +60,7 @@
   <body>
     <noscript>
       <strong>
-        We're sorry but stratroulette.net doesn't work properly without JavaScript
+        We're sorry but stratroulette.net doesn't work without JavaScript
         enabled. Please enable it to continue.
       </strong>
     </noscript>
