--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
+    <meta name="Description" content="The number one fun strategy generator for Rainbow Six: Siege!"/>
+    <meta name="Keywords" content="strat,strategy,game,gaming,rainbow,six,siege,generator,stratroulette"/>
+    <meta property="og:image" content="<%= BASE_URL %>thumb.jpg"/>
+    <meta name="google-site-verification" content="Uf8v3vnOhD7yveO0SjnF0ARJJ7NTu79txVZzn56QMy8"/>
+
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png?v=2">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png?v=2">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png?v=2">
