--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,9 @@
         position: relative;
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: 100% !important;
+        min-height: 100% !important;
+        max-height: 100% !important;
         width: 100%;
         overflow: hidden;
 
