wip move to vite and vue 3

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <meta name="Description" content="The number one fun strategy generator for Rainbow Six: Siege!"/>
     <meta name="Keywords" content="strat,strategy,game,gaming,rainbow,six,siege,generator,stratroulette"/>
-    <meta property="og:image" content="<%= BASE_URL %>thumb.jpg"/>
+    <meta property="og:image" content="/thumb.jpg"/>
     <meta name="google-site-verification" content="Uf8v3vnOhD7yveO0SjnF0ARJJ7NTu79txVZzn56QMy8"/>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png?v=2">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png?v=2">
-    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest?v=2">
-    <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg?v=2" color="#222">
-    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico?v=2">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+    <link rel="manifest" href="/site.webmanifest?v=2">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#222">
+    <link rel="shortcut icon" href="/favicon.ico?v=2">
     <meta name="apple-mobile-web-app-title" content="sr.net">
     <meta name="application-name" content="sr.net">
     <meta name="msapplication-TileColor" content="#222">
@@ -60,6 +60,6 @@
 
     <div id="app"></div>
 
-    <!-- built files will be auto injected -->
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
