make sure page is dark

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <title>R6|S - stratroulette.net</title>
 
     <style>
+      html {
+        background: #111;
+      }
+
       html,
       body,
       #app {
