--- a/index.html
+++ b/index.html
@@ -55,9 +55,17 @@
     </style>
 
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css?family=Catamaran:800|Lato:400,300&amp;display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Catamaran:800|Lato:400,300&amp;display=swap"
+      />
+    </noscript>
   </head>
 
   <body>
