--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <meta name="msapplication-TileColor" content="#222" />
     <meta name="theme-color" content="#222" />
 
+    <link href="https://github.com/BeeeQueue" rel="me" />
+
     <title>R6|S - stratroulette.net</title>
 
     <style>
